<resources>
    <string name="YmdHms">ymwdhms></string>
    <string name="Years">Years: </string>
    <string name="Months">Months: </string>
    <string name="Weeks">Weeks: </string>
    <string name="Days">Days: </string>
    <string name="Hours">Hours: </string>
    <string name="Minutes">Minutes: </string>
    <string name="Seconds">Seconds: </string>
    <string name="Event">Event</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Totals">Totals</string>
    <string name="app_name">Age Calculator</string>
    <string name="next_party" formatted="false">Next: %s</string>
    <string name="Age" formatted="false">Age: %s %ss</string>
    <string name="DateNotInPast">Date must be in the past</string>
    <string name="DateMustBeAfter">Date must be after %s</string>
    <string name="s">s</string>
    <string name="mi">m</string>
    <string name="h">h</string>
    <string name="d">d</string>
    <string name="w">w</string>
    <string name="m">mi</string>
    <string name="y">y</string>
    <string name="time_picker">Time picker</string>
    <string name="date_picker">Date picker</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="Dates">Dates for</string>
    <string name="naam">Naam</string>
    <string name="vertbar">|</string>
    <string name="menu">Menu</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="MaxPersonen">Maximum numer of persons is %s</string>
    <string name="MinPersonen">You cannot remove the last person</string>
    <string name="PersonsShow">Show persons</string>
    <string name="Person1">Naam 1</string>
    <string name="Person2">Naam 2</string>
    <string name="Person3">Naam 3</string>
    <string name="Person4">Naam 4</string>
    <string name="Person5">Naam 5</string>
    <string name="OK">OK</string>
    <string name="ShowsHidePersons">Show/hide persons</string>

</resources>